add styler and the languageserver

--- a/pipeline-runner/DESCRIPTION
+++ b/pipeline-runner/DESCRIPTION
@@ -17,11 +17,13 @@ Imports:
     covr,
     data.table
 Suggests: 
+    languageserver,
     devtools,
     httptest,
     roxygen2,
     testthat (>= 3.0.0),
-    usethis
+    usethis,
+    styler
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
