--- a/pipeline-runner/DESCRIPTION
+++ b/pipeline-runner/DESCRIPTION
@@ -17,13 +17,13 @@ Imports:
     covr,
     data.table
 Suggests: 
-    languageserver,
     devtools,
     httptest,
+    languageserver,
     roxygen2,
+    styler,
     testthat (>= 3.0.0),
-    usethis,
-    styler
+    usethis
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
