--- a/local-runner/cf-local-container-launcher.yaml
+++ b/local-runner/cf-local-container-launcher.yaml
@@ -29,7 +29,7 @@ Resources:
           def handler(event, context):
 
             docker_command = ' '.join([
-              "docker run -t",
+              "docker run --rm -t",
               f"--name {event['name']}-{random_string(10)}",
               f"{'-d' if event['detached'] else ''}",
               f"--env ACTIVITY_ARN={event.get('activityArn', '')}",
