--- a/pipeline-runner/DESCRIPTION
+++ b/pipeline-runner/DESCRIPTION
@@ -13,7 +13,7 @@ License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
 Depends: 
     R (>= 4.2.0)
 Imports:
-    batchelor,
+    batchelor (== 1.12.1),
     covr,
     data.table
 Suggests: 
