--- a/.github/workflows/pr_validate.yaml
+++ b/.github/workflows/pr_validate.yaml
@@ -91,7 +91,7 @@ jobs:
         continue-on-error: true
         run: |-
           REGEX="\[[Xx]\] Started end-to-end tests on the latest commit\."
-    
+
           pcregrep -o1 -M "$REGEX" <<\EOF
           ${{ github.event.pull_request.body }}
           EOF
@@ -100,10 +100,10 @@ jobs:
     name: Run integration tests
     runs-on: ubuntu-20.04
     needs: lint-pr-body
-    concurrency: 
+    concurrency:
       group: ${{ github.sha }}
     steps:
-      
+
       - id: check-e2e-run
         name: Check if E2E should run
         run: |-
@@ -115,7 +115,7 @@ jobs:
             SHOULD_CANCEL_E2E='true'
           fi
           echo $SHOULD_CANCEL_E2E
-          
+
           echo "Should E2E be run?"
           if [ "${{ needs.lint-pr-body.outputs.is-staging-na}}" = 'true' ]; then
             SHOULD_RUN_E2E='false'
@@ -124,7 +124,7 @@ jobs:
 
           echo "::set-output name=should-e2e-cancel::$SHOULD_CANCEL_E2E"
           echo "::set-output name=should-e2e-run::$SHOULD_RUN_E2E"
-        
+
       - id: cancel
         name: Cancel if staging is not N/A and box is not checked
         if: steps.check-e2e-run.outputs.should-e2e-cancel == 'true'
@@ -141,9 +141,9 @@ jobs:
         if: steps.check-e2e-run.outputs.should-e2e-run == 'true'
         name: Get details of last commit
         run: |-
-          echo "SHA of GitHub merge commit:"
-          echo $GITHUB_SHA
-          echo "::set-output name=github_sha::$GITHUB_SHA"
+          echo "SHA of latest GitHub branch commit:"
+          echo ${{ github.event.pull_request.head.sha }}
+          echo "::set-output name=github_sha::${{ github.event.pull_request.head.sha }}"
 
           REPO_NAME=$(echo $GITHUB_REPOSITORY | awk -F '/' '{print $2}')
           echo "Repo name:"
