--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -267,7 +267,7 @@ jobs:
             CHART_REF="$GITHUB_SHA"
             KUBERNETES_ENV="staging"
             REPLICA_COUNT="1"
-            IMAGE_GLOB="${IMAGE_TAG/$COMMIT_SHA/*}"
+            IMAGE_GLOB="${IMAGE_TAG/COMMIT_SHA/*}"
             MEMORY_REQUEST="29Gi"
           fi
 
@@ -276,7 +276,7 @@ jobs:
             CHART_REF="STAGING_CHART_REF"
             KUBERNETES_ENV="staging"
             REPLICA_COUNT="0"
-            IMAGE_GLOB="${IMAGE_TAG/$COMMIT_SHA/*}"
+            IMAGE_GLOB="${IMAGE_TAG/COMMIT_SHA/*}"
             MEMORY_REQUEST="4Gi"
           fi
 
