--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -244,6 +244,14 @@ jobs:
         run: |-
           sudo wget https://github.com/mikefarah/yq/releases/download/3.4.1/yq_linux_amd64 -O /usr/local/bin/yq && sudo chmod +x /usr/local/bin/yq
 
+      - id: check
+        name: Check commit sha
+        run: |-
+          echo "Checkint commit SHA"
+          echo "$COMMIT_SHA"
+        env:
+          COMMIT_SHA: ${{ needs.build-docker.ouputs.commit-sha }}
+
       - id: fill-metadata
         name: Fill out a new HelmRelease resource
         run: |-
@@ -267,7 +275,7 @@ jobs:
             CHART_REF="$GITHUB_SHA"
             KUBERNETES_ENV="staging"
             REPLICA_COUNT="1"
-            IMAGE_GLOB="${IMAGE_TAG/COMMIT_SHA/*}"
+            IMAGE_GLOB="${IMAGE_TAG/$COMMIT_SHA/*}"
             MEMORY_REQUEST="29Gi"
           fi
 
@@ -276,7 +284,7 @@ jobs:
             CHART_REF="STAGING_CHART_REF"
             KUBERNETES_ENV="staging"
             REPLICA_COUNT="0"
-            IMAGE_GLOB="${IMAGE_TAG/COMMIT_SHA/*}"
+            IMAGE_GLOB="${IMAGE_TAG/$COMMIT_SHA/*}"
             MEMORY_REQUEST="4Gi"
           fi
 
