--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -244,14 +244,6 @@ jobs:
         run: |-
           sudo wget https://github.com/mikefarah/yq/releases/download/3.4.1/yq_linux_amd64 -O /usr/local/bin/yq && sudo chmod +x /usr/local/bin/yq
 
-      - id: check
-        name: Check commit sha
-        run: |-
-          echo "Checkint commit SHA"
-          echo "$COMMIT_SHA"
-        env:
-          COMMIT_SHA: ${{ needs.build-docker.ouputs.commit-sha }}
-
       - id: fill-metadata
         name: Fill out a new HelmRelease resource
         run: |-
@@ -311,7 +303,7 @@ jobs:
         env:
           IMAGE_NAME: ${{ format('{0}/{1}:{2}', steps.login-ecr.outputs.registry, needs.build-docker.outputs.repo-name, needs.build-docker.outputs.tag) }}
           IMAGE_TAG: ${{ needs.build-docker.outputs.tag }}
-          COMMIT_SHA: ${{ needs.build-docker.ouputs.commit-sha }}
+          COMMIT_SHA: ${{ needs.build-docker.outputs.commit-sha }}
 
       - name: Push production/develop template to releases
         if:
