--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -263,7 +263,8 @@ jobs:
             CHART_REF="$GITHUB_SHA"
             KUBERNETES_ENV="production"
             REPLICA_COUNT="3"
-            IMAGE_GLOB="$REF_ID-*"
+            SHORT_TAG_REF=${REF_ID/refs-tags-/}
+            IMAGE_GLOB="${REF_ID/$SHORT_TAG_REF/*}"
             MEMORY_REQUEST="29Gi"
           fi
 
