--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -59,7 +59,6 @@ jobs:
       repo-name: ${{ steps.ref.outputs.repo-name }}
       image-tag: ${{ steps.ref.outputs.image-tag }}
       ref-id: ${{ steps.ref.outputs.ref-id }}
-      commit-sha: ${{ steps.ref.outputs.commit-sha }}
     defaults:
       run:
         working-directory: ${{ matrix.project }}
@@ -95,8 +94,6 @@ jobs:
             COMMIT_SHA=$GITHUB_SHA
             IMAGE_TAG="$REF_ID-$COMMIT_SHA"
           fi
-
-          echo "::set-output name=commit-sha::$COMMIT_SHA"
 
           # IMAGE_TAG is used in the Build Docker Image step.
           # We can easily build the image-tag from REF_ID and COMMIT_SHA for non-production releases.
@@ -273,7 +270,7 @@ jobs:
             CHART_REF="$GITHUB_SHA"
             KUBERNETES_ENV="staging"
             REPLICA_COUNT="1"
-            IMAGE_GLOB="$REF_ID-$COMMIT_SHA-*"
+            IMAGE_GLOB="$REF_ID-*"
             MEMORY_REQUEST="29Gi"
           fi
 
@@ -282,7 +279,7 @@ jobs:
             CHART_REF="STAGING_CHART_REF"
             KUBERNETES_ENV="staging"
             REPLICA_COUNT="0"
-            IMAGE_GLOB="$REF_ID-$COMMIT_SHA-*"
+            IMAGE_GLOB="$REF_ID-*"
             MEMORY_REQUEST="4Gi"
           fi
 
@@ -309,7 +306,6 @@ jobs:
         env:
           IMAGE_NAME: ${{ format('{0}/{1}:{2}', steps.login-ecr.outputs.registry, needs.build-docker.outputs.repo-name, needs.build-docker.outputs.image-tag) }}
           REF_ID: ${{ needs.build-docker.outputs.ref-id }}
-          COMMIT_SHA: ${{ needs.build-docker.outputs.commit-sha }}
 
       - name: Push production/develop template to releases
         if:
