fixed tests and removed more api_version references

--- a/pipeline-runner/NAMESPACE
+++ b/pipeline-runner/NAMESPACE
@@ -13,8 +13,7 @@ export(generate_default_values_classifier)
 export(generate_first_step_ids)
 export(getClusters)
 export(get_feature_types)
-export(get_gem2s_file_v1)
-export(get_gem2s_file_v2)
+export(get_gem2s_file)
 export(list_exclude_genes)
 export(load_user_files)
 export(merge_scdatas)
