--- a/pipeline-runner/Dockerfile
+++ b/pipeline-runner/Dockerfile
@@ -105,8 +105,6 @@ FROM common AS dev
 # also install watchdog to automatically restart
 # when source files change
 RUN pip install -U jedi radian PyYAML watchdog[watchmedo]
-RUN apt update && apt -y install git
-RUN pip install memory_profiler
 
 # add R package files and runner
 ADD R ./R
@@ -114,5 +112,4 @@ ADD tests ./tests
 COPY DESCRIPTION NAMESPACE init.R ./
 
 # start app
-COPY start.sh start.sh
-ENTRYPOINT ["./start.sh"]
+ENTRYPOINT ["Rscript", "init.R"]
