--- a/chart-infra-xl/templates/serviceaccount.yaml
+++ b/chart-infra-xl/templates/serviceaccount.yaml
@@ -6,4 +6,4 @@ metadata:
   labels:
     sandboxId: "{{ .Values.sandboxId }}"
   annotations:
-    eks.amazonaws.com/role-arn: "{{ .Values.serviceAccount.iamRole }}"
+    eks.amazonaws.com/role-arn: "arn:aws:iam::{{ .Values.myAccount.accountId }}:role/{{ .Values.serviceAccount.iamRole }}"
