--- a/chart-infra-xl/templates/instance-configmap.yaml
+++ b/chart-infra-xl/templates/instance-configmap.yaml
@@ -6,4 +6,4 @@ metadata:
   labels:
     sandboxId: "{{ .Values.sandboxId }}"
 data:
-  pipeline-runner: "{{ index .Values "pipeline-runner" "image" }}"
+  pipelineRunner: "{{ index .Values "image" }}"
