--- a/chart-infra-xl/templates/pipeline-spawn-right-to-api.yaml
+++ b/chart-infra-xl/templates/pipeline-spawn-right-to-api.yaml
@@ -16,7 +16,7 @@ rules:
   resources: ["helmreleases"]
   verbs: ["create", "get", "watch", "list", "update", "patch", "delete", "deletecollection"]
 ---
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: api-state-machine-can-spawn-pipeline-components
