--- a/chart-infra-xl/templates/kube-cleanup-operator-deployment.yaml
+++ b/chart-infra-xl/templates/kube-cleanup-operator-deployment.yaml
@@ -23,7 +23,7 @@ spec:
         run: cleanup-operator
         sandboxId: "{{ .Values.sandboxId }}"
     spec:
-      serviceAccountName: cleanup-operator
+      serviceAccountName: cleanup-operator-xl
       containers:
       - args:
         - --namespace={{.Release.Namespace}}
@@ -47,12 +47,12 @@ spec:
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: cleanup-operator
+  name: cleanup-operator-xl
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: cleanup-operator
+  name: cleanup-operator-xl
 rules:
 - apiGroups:
   - ""
@@ -75,11 +75,11 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: cleanup-operator
+  name: cleanup-operator-xl
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
-  name: cleanup-operator
+  name: cleanup-operator-xl
 subjects:
 - kind: ServiceAccount
-  name: cleanup-operator
+  name: cleanup-operator-xl
