--- a/chart-infra/templates/deployment-xl.yaml
+++ b/chart-infra/templates/deployment-xl.yaml
@@ -1,6 +1,18 @@
-{{/* Generate a template that can be used for both assigned and unassigned xperiments */}}
-# go templating language
-{{- define "pipeline.pod-template" -}}
+apiVersion:  {{ default "apps/v1" .Values.deploymentApiVersion }}
+kind: Deployment
+metadata:
+  name: "{{ .Release.Name }}-xl"
+  namespace: "{{ .Values.namespace }}"
+  labels:
+    sandboxId: "{{ .Values.sandboxId }}"
+spec:
+  replicas: {{ .Values.replicaCount }}
+  selector:
+    matchLabels:
+      sandboxId: "{{ .Values.sandboxId }}"
+    matchExpressions:
+      - {key: activityId, operator: DoesNotExist}
+  template:
     metadata:
       name: "{{ .Release.Name }}-server"
       labels:
@@ -9,6 +21,12 @@
     spec:
       restartPolicy: Always
       serviceAccountName: 'deployment-runner'
+      nodeSelector:
+        size: xl
+      tolerations:
+        - key: size
+          value: xl
+          effect: NoExecute
       containers:
       - name: "{{ .Release.Name }}"
         image: "{{ .Values.pipelineRunner.image }}"
@@ -32,4 +50,3 @@
             - path: "labels"
               fieldRef:
                 fieldPath: metadata.labels
-{{- end -}}
