added size:default label to default deployment

--- a/chart-infra/templates/deployment-xl.yaml
+++ b/chart-infra/templates/deployment-xl.yaml
@@ -18,6 +18,7 @@ spec:
       labels:
         type: 'pipeline'
         sandboxId: "{{ .Values.sandboxId }}"
+        size: xl
     spec:
       restartPolicy: Always
       serviceAccountName: 'deployment-runner'
