--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -162,40 +162,40 @@ jobs:
         env:
           IMAGE_NAME: ${{ format('{0}/{1}:{2}-{3}', steps.login-ecr.outputs.registry, steps.ref.outputs.repo-name, steps.ref-previous.outputs.tag, matrix.project) }}
 
-      # - id: build
-      #   name: Build Docker images
-      #   run: |-
-      #     docker build --target builder \
-      #       --cache-from=$PREVIOUS_IMAGE_NAME-builder \
-      #       --build-arg GITHUB_PAT=$GITHUB_PAT \
-      #       --tag $IMAGE_NAME-builder .
+      - id: build
+        name: Build Docker images
+        run: |-
+          docker build --target builder \
+            --cache-from=$PREVIOUS_IMAGE_NAME-builder \
+            --build-arg GITHUB_PAT=$GITHUB_PAT \
+            --tag $IMAGE_NAME-builder .
 
-      #     docker build --target prod \
-      #       --cache-from=$IMAGE_NAME-builder \
-      #       --cache-from=$PREVIOUS_IMAGE_NAME \
-      #       --build-arg GITHUB_PAT=$GITHUB_PAT \
-      #       --tag $IMAGE_NAME .
-      #   env:
-      #     PREVIOUS_IMAGE_NAME: ${{ format('{0}/{1}:{2}-{3}', steps.login-ecr.outputs.registry, steps.ref.outputs.repo-name, steps.ref-previous.outputs.tag, matrix.project) }}
-      #     IMAGE_NAME: ${{ format('{0}/{1}:{2}-{3}', steps.login-ecr.outputs.registry, steps.ref.outputs.repo-name, steps.ref.outputs.image-tag, matrix.project) }}
-      #     GITHUB_PAT: ${{ secrets.API_TOKEN_GITHUB }}
+          docker build --target prod \
+            --cache-from=$IMAGE_NAME-builder \
+            --cache-from=$PREVIOUS_IMAGE_NAME \
+            --build-arg GITHUB_PAT=$GITHUB_PAT \
+            --tag $IMAGE_NAME .
+        env:
+          PREVIOUS_IMAGE_NAME: ${{ format('{0}/{1}:{2}-{3}', steps.login-ecr.outputs.registry, steps.ref.outputs.repo-name, steps.ref-previous.outputs.tag, matrix.project) }}
+          IMAGE_NAME: ${{ format('{0}/{1}:{2}-{3}', steps.login-ecr.outputs.registry, steps.ref.outputs.repo-name, steps.ref.outputs.image-tag, matrix.project) }}
+          GITHUB_PAT: ${{ secrets.API_TOKEN_GITHUB }}
 
-      # - id: codecov
-      #   name: Generate codecov report
-      #   run: |-
-      #     docker run \
-      #       --entrypoint /bin/bash \
-      #       -v $(pwd)/covr:/covr $IMAGE_NAME \
-      #       -c "R -e 'cov <- covr::package_coverage(); covr::to_cobertura(cov, \"/covr/coverage.xml\")'"
+      - id: codecov
+        name: Generate codecov report
+        run: |-
+          docker run \
+            --entrypoint /bin/bash \
+            -v $(pwd)/covr:/covr $IMAGE_NAME \
+            -c "R -e 'cov <- covr::package_coverage(); covr::to_cobertura(cov, \"/covr/coverage.xml\")'"
 
-      #   env:
-      #     IMAGE_NAME: ${{ format('{0}/{1}:{2}-{3}', steps.login-ecr.outputs.registry, steps.ref.outputs.repo-name, steps.ref.outputs.image-tag, matrix.project) }}
+        env:
+          IMAGE_NAME: ${{ format('{0}/{1}:{2}-{3}', steps.login-ecr.outputs.registry, steps.ref.outputs.repo-name, steps.ref.outputs.image-tag, matrix.project) }}
 
-      # - id: upload-coverage
-      #   name: Upload coverage to Codecov
-      #   uses: codecov/codecov-action@v2
-      #   with:
-      #     files: ./pipeline-runner/covr/coverage.xml
+      - id: upload-coverage
+        name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v2
+        with:
+          files: ./pipeline-runner/covr/coverage.xml
 
       - id: push
         name: Push docker images to ECR
@@ -238,7 +238,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: 'us-east-1'
+          aws-region: 'us-east-1
 
       - id: login-ecr
         name: Login to Amazon ECR
