ran devtools::document()

--- a/pipeline-runner/NAMESPACE
+++ b/pipeline-runner/NAMESPACE
@@ -14,6 +14,7 @@ export(filter_low_cellsize)
 export(filter_unnamed_features)
 export(generate_default_values_cellSizeDistribution)
 export(generate_default_values_classifier)
+export(generate_elbow_plot_data)
 export(generate_first_step_ids)
 export(getClusters)
 export(get_feature_types)
@@ -21,12 +22,14 @@ export(get_gem2s_file)
 export(ids_to_sym)
 export(list_exclude_genes)
 export(load_user_files)
+export(log_normalize)
 export(make_annot_with_ids)
 export(merge_scdata_list)
 export(normalize_annotation_types)
 export(normalize_data)
 export(prepare_experiment)
 export(read_10x_annotations)
+export(remove_filtered_cells)
 export(remove_genes)
 export(runClusters)
 export(run_emptydrops)
