init ghost packages/functions

--- a/pipeline-runner/Dockerfile
+++ b/pipeline-runner/Dockerfile
@@ -46,6 +46,14 @@ RUN R -e "renv::restore(lockfile='renv.lock', library = '$RENV_LIB', clean = TRU
 COPY setup/get_sysdeps_run.R .
 RUN Rscript get_sysdeps_run.R
 
+# remove identified packages with potentially conflicting licenses
+COPY setup/create_ghost_packages.R .
+RUN Rscript create_ghost_packages.R
+
+# check for any potentially problematic licenses
+COPY setup/check_package_licenses.R .
+RUN Rscript check_package_licenses.R
+
 # ---------------------------------------------------
 # COMMON MINIMAL BUILD
 # ---------------------------------------------------
