--- a/chart-infra/templates/datadog-sidecar-rbac.yaml
+++ b/chart-infra/templates/datadog-sidecar-rbac.yaml
@@ -1,7 +1,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: "datadog-sidecar-{{ Values.namespace }}"
+  name: "datadog-sidecar-{{.Release.Namespace}}"
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
