--- a/pipeline-runner/Dockerfile
+++ b/pipeline-runner/Dockerfile
@@ -42,6 +42,26 @@ RUN R -e "renv::restore(lockfile='renv.lock', library = '$RENV_LIB', clean = TRU
     R -e 'root <- renv::paths$root(); unlink(root, recursive = TRUE)' && \
     strip --strip-debug $RENV_LIB/*/libs/*.so
 
+# install miniconda and geosketch
+# clean conda
+# RUN apt-get update && apt-get upgrade -y
+# RUN apt-get install -y python3.8-venv
+ENV RETICULATE_MINICONDA_PATH=/src/r-miniconda
+RUN R -e "Sys.setenv(RETICULATE_PYTHON = 'root/.virtualenvs/r-reticulate/bin/python')" && \
+    R -e "reticulate::install_miniconda()" && \
+#    R -e "reticulate::virtualenv_install('r-reticulate', 'geosketch')" && \
+    R -e "reticulate::conda_install('r-reticulate', 'geosketch', pip = TRUE)" && \
+ #   R -e "reticulate::conda_install(packages = 'geosketch', python_version='3.6.15', channel = 'bioconda')" && \
+#    R -e "reticulate::py_install('geosketch')" && \
+    R -e "geosketch <- reticulate::import('geosketch')" && \
+ #   R -e "reticulate::use_python('/src/r-miniconda/lib/python3.10')" && \
+ #    R -e "reticulate::virtualenv_create('gsk')" && \
+ #    R -e "reticulate::use_virtualenv('gsk')" && \
+  #   R -e "reticulate::virtualenv_install('gsk', 'geosketch')" && \
+   #  R -e "geosketch <- reticulate::import('geosketch')" && \
+     CONDA_PATH=$(R -e "cat(reticulate::conda_binary())") && \
+    $CONDA_PATH clean --force-pkgs-dirs -y
+
 # determine system run-time deps
 COPY setup/get_sysdeps_run.R .
 RUN Rscript get_sysdeps_run.R
@@ -51,6 +71,7 @@ RUN Rscript get_sysdeps_run.R
 # ---------------------------------------------------
 FROM rocker/r-ver:4.2.0 AS common
 WORKDIR /src/pipeline-runner
+ENV RETICULATE_MINICONDA_PATH=/src/r-miniconda
 
 # get source code and R packages
 COPY --from=builder /src /src
@@ -66,6 +87,8 @@ RUN echo "python3-pip" >> sysdeps_run.txt && \
     cat sysdeps_run.txt | xargs ./install_debian_packages.sh && \
     rm -rf *
 
+RUN rm /usr/lib/x86_64-linux-gnu/libstdc++.so.6 && \
+    ln -s /src/r-miniconda/envs/r-reticulate/lib/libstdc++.so.6 /usr/lib/x86_64-linux-gnu/libstdc++.so.6
 
 # ---------------------------------------------------
 # PRODUCTION BUILD
@@ -112,6 +135,9 @@ RUN pip install memory_profiler
 ADD R ./R
 ADD tests ./tests
 COPY DESCRIPTION NAMESPACE init.R ./
+
+RUN rm /usr/lib/x86_64-linux-gnu/libstdc++.so.6 && \
+    ln -s /src/r-miniconda/envs/r-reticulate/lib/libstdc++.so.6 /usr/lib/x86_64-linux-gnu/libstdc++.so.6
 
 # start app
 COPY start.sh start.sh
