--- a/chart-infra/templates/datadog-sidecar-rbac.yaml
+++ b/chart-infra/templates/datadog-sidecar-rbac.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.myAccount.datadogEnabled "true" -}}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
@@ -10,3 +11,4 @@ subjects:
   - kind: ServiceAccount
     name: deployment-runner
     namespace: "{{.Release.Namespace}}"
+{{- end -}}
