--- a/chart-infra/templates/datadog-sidecar-rbac.yaml
+++ b/chart-infra/templates/datadog-sidecar-rbac.yaml
@@ -1,4 +1,4 @@
-{{- if eq .Values.myAccount.datadogEnabled "true" -}}
+{{- if eq .Values.myAccount.datadogEnabled "false" -}}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
