--- a/.github/workflows/pr_validate.yaml
+++ b/.github/workflows/pr_validate.yaml
@@ -41,7 +41,16 @@ jobs:
       - id: extract-staging
         name: Check staging URL
         run: |-
-          REGEX="#### Link to staging deployment URL \(or set N\/A\)\s?\r\n(https:\/\/ui-(.+)\.scp-staging\.biomage\.net|N\/A)"
+        
+          REPO_NAME=${{ github.event.repository.name }}
+
+          if [ $REPO_NAME = 'hms-dbmi-cellenics' ]; then
+            REGEX="#### Link to staging deployment URL \(or set N\/A\)\s?\r\n(https:\/\/ui-(.+)\.staging\.single-cell-platform\.net|N\/A)"
+          fi
+
+          if [ $REPO_NAME = 'biomage-org' ]; then
+            REGEX="#### Link to staging deployment URL \(or set N\/A\)\s?\r\n(https:\/\/ui-(.+)\.scp-staging\.biomage\.net|N\/A)"
+          fi
 
           echo "REGEX to test against:"
           echo $REGEX
