--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -212,10 +212,10 @@ jobs:
         name: Send failure notification to Slack
         if: failure() && github.event_name == 'push'
         env:
-          SLACK_BOT_TOKEN: ${{ secrets.BUILD_STATUS_BOT_TOKEN }}
+          SLACK_BOT_TOKEN: ${{ secrets.WORKFLOW_STATUS_BOT_TOKEN }}
         uses: voxmedia/github-action-slack-notify-build@v1
         with:
-          channel: pipelines
+          channel: workflow-failures
           status: FAILED
           color: danger
 
@@ -347,10 +347,10 @@ jobs:
         name: Send failure notification to Slack
         if: failure() && github.event_name == 'push'
         env:
-          SLACK_BOT_TOKEN: ${{ secrets.BUILD_STATUS_BOT_TOKEN }}
+          SLACK_BOT_TOKEN: ${{ secrets.WORKFLOW_STATUS_BOT_TOKEN }}
         uses: voxmedia/github-action-slack-notify-build@v1
         with:
-          channel: pipelines
+          channel: workflow-failures
           status: FAILED
           color: danger
 
