--- a/pipeline-runner/Dockerfile
+++ b/pipeline-runner/Dockerfile
@@ -47,9 +47,7 @@ RUN R -e "renv::restore(lockfile='renv.lock', library = '$RENV_LIB', clean = TRU
 ENV RETICULATE_MINICONDA_PATH=/src/r-miniconda
 RUN R -e "Sys.setenv(RETICULATE_PYTHON = 'root/.virtualenvs/r-reticulate/bin/python')" && \
     R -e "reticulate::install_miniconda()" && \
-    R -e "reticulate::conda_install('r-reticulate', 'geosketch', pip = TRUE)" && \
-    R -e "geosketch <- reticulate::import('geosketch')" && \
-    R -e "reticulate::conda_install('r-reticulate', 'scanorama', pip = TRUE)" && \
+    R -e "reticulate::conda_install('geosketch', 'scanorama', pip = TRUE)" && \
      CONDA_PATH=$(R -e "cat(reticulate::conda_binary())") && \
     $CONDA_PATH clean --force-pkgs-dirs -y
 
@@ -77,9 +75,6 @@ RUN echo "python3-pip" >> sysdeps_run.txt && \
     echo "wget" >> sysdeps_run.txt && \
     cat sysdeps_run.txt | xargs ./install_debian_packages.sh && \
     rm -rf *
-
-RUN rm /usr/lib/x86_64-linux-gnu/libstdc++.so.6 && \
-    ln -s /src/r-miniconda/envs/r-reticulate/lib/libstdc++.so.6 /usr/lib/x86_64-linux-gnu/libstdc++.so.6
 
 # ---------------------------------------------------
 # PRODUCTION BUILD
@@ -126,9 +121,6 @@ RUN pip install memory_profiler
 ADD R ./R
 ADD tests ./tests
 COPY DESCRIPTION NAMESPACE init.R ./
-
-RUN rm /usr/lib/x86_64-linux-gnu/libstdc++.so.6 && \
-    ln -s /src/r-miniconda/envs/r-reticulate/lib/libstdc++.so.6 /usr/lib/x86_64-linux-gnu/libstdc++.so.6
 
 # start app
 COPY start.sh start.sh
