--- a/pipeline-runner/Dockerfile
+++ b/pipeline-runner/Dockerfile
@@ -47,7 +47,9 @@ RUN R -e "renv::restore(lockfile='renv.lock', library = '$RENV_LIB', clean = TRU
 ENV RETICULATE_MINICONDA_PATH=/src/r-miniconda
 RUN R -e "Sys.setenv(RETICULATE_PYTHON = 'root/.virtualenvs/r-reticulate/bin/python')" && \
     R -e "reticulate::install_miniconda()" && \
-    R -e "reticulate::conda_install('geosketch', 'scanorama', pip = TRUE)" && \
+    R -e "reticulate::conda_install('r-reticulate', 'geosketch', pip = TRUE)" && \
+    R -e "geosketch <- reticulate::import('geosketch')" && \
+    R -e "reticulate::conda_install('r-reticulate', 'scanorama', pip = TRUE)" && \
      CONDA_PATH=$(R -e "cat(reticulate::conda_binary())") && \
     $CONDA_PATH clean --force-pkgs-dirs -y
 
