--- a/pipeline-runner/NAMESPACE
+++ b/pipeline-runner/NAMESPACE
@@ -20,6 +20,7 @@ export(getClusters)
 export(get_feature_types)
 export(get_gem2s_file)
 export(ids_to_sym)
+export(learn_from_sketches)
 export(list_exclude_genes)
 export(load_user_files)
 export(log_normalize)
@@ -27,12 +28,14 @@ export(make_annot_with_ids)
 export(merge_scdata_list)
 export(normalize_annotation_types)
 export(normalize_data)
+export(perform_geosketch)
 export(prepare_experiment)
 export(read_10x_annotations)
 export(remove_filtered_cells)
 export(remove_genes)
 export(runClusters)
 export(run_emptydrops)
+export(run_pca)
 export(score_doublets)
 export(subset_ids)
 export(subset_safe)
