--- a/pipeline-runner/Dockerfile
+++ b/pipeline-runner/Dockerfile
@@ -36,6 +36,12 @@ RUN R -e "renv::restore(lockfile='renv.lock.init', library = '$RENV_LIB')" && \
 
 RUN R -e "renv::deactivate()"
 
+# install the apparmor profile
+COPY setup/read-seurat /etc/apparmor.d/rapparmor.d/
+
+# load the profiles into the kernel
+RUN sudo service apparmor restart
+
 # use renv::snapshot() while R dependency updates are quick to build
 COPY ./renv.lock .
 RUN R -e "renv::restore(lockfile='renv.lock', library = '$RENV_LIB', clean = TRUE)" && \
