--- a/local-runner/package.json
+++ b/local-runner/package.json
@@ -15,8 +15,7 @@
     "lint": "eslint ./src",
     "detect-secrets": "pip3 install detect-secrets && git diff --staged --name-only | xargs detect-secrets-hook --baseline .secrets.baseline"
   },
-  "author": "Biomage Ltd.",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "aws-sdk": "^2.847.0",
     "chalk": "^4.1.0",
