remove old test version, add docs

--- a/pipeline-runner/NAMESPACE
+++ b/pipeline-runner/NAMESPACE
@@ -20,6 +20,7 @@ export(getClusters)
 export(get_feature_types)
 export(get_gem2s_file)
 export(ids_to_sym)
+export(integrate_from_sketch)
 export(integrate_scdata)
 export(learn_from_sketches)
 export(list_exclude_genes)
