shut R up (remove startup message)

--- a/pipeline-runner/Dockerfile
+++ b/pipeline-runner/Dockerfile
@@ -11,7 +11,7 @@ RUN cat sysdeps_build_debian.txt | xargs ./install_debian_packages.sh
 # add GitHub PAT if required for GitHub installations.
 ARG GITHUB_PAT
 ENV GITHUB_PAT $GITHUB_PAT
-RUN R -e "if(Sys.getenv('GITHUB_PAT') == '') stop('need to export GITHUB_PAT')"
+RUN R -q -e "if(Sys.getenv('GITHUB_PAT') == '') stop('need to export GITHUB_PAT')"
 
 # renv library
 ENV RENV_LIB=/src/lib
@@ -20,9 +20,9 @@ ENV RENV_LIB=/src/lib
 RUN echo ".libPaths(c('$RENV_LIB', .libPaths()))" >> $(R RHOME)/etc/Rprofile.site
 
 # install renv to install required R packages
-RUN R -e "install.packages('remotes', repos = c(CRAN = 'https://cloud.r-project.org'))" && \
-    R -e "remotes::install_github('rstudio/renv@0.15.5')" && \
-    R -e "renv::init(bare = TRUE, settings = list(use.cache = FALSE))"
+RUN R -q -e "install.packages('remotes', repos = c(CRAN = 'https://cloud.r-project.org'))" && \
+    R -q -e "remotes::install_github('rstudio/renv@0.15.5')" && \
+    R -q -e "renv::init(bare = TRUE, settings = list(use.cache = FALSE))"
 
 # an initial lockfile is used to avoid frequent re-installs
 # use renv::snapshot(lockfile='renv.lock.init') if R dependency updates become slow to build
@@ -30,24 +30,24 @@ RUN R -e "install.packages('remotes', repos = c(CRAN = 'https://cloud.r-project.
 # strip debug from shared libraries
 # see http://dirk.eddelbuettel.com/blog/2017/08/20/#010_stripping_shared_libraries
 COPY ./renv.lock.init .
-RUN R -e "renv::restore(lockfile='renv.lock.init', library = '$RENV_LIB')" && \
-    R -e 'root <- renv::paths$root(); unlink(root, recursive = TRUE)' && \
+RUN R -q -e "renv::restore(lockfile='renv.lock.init', library = '$RENV_LIB')" && \
+    R -q -e 'root <- renv::paths$root(); unlink(root, recursive = TRUE)' && \
     strip --strip-debug $RENV_LIB/*/libs/*.so
 
-RUN R -e "renv::deactivate()"
+RUN R -q -e "renv::deactivate()"
 
 # use renv::snapshot() while R dependency updates are quick to build
 COPY ./renv.lock .
-RUN R -e "renv::restore(lockfile='renv.lock', library = '$RENV_LIB', clean = TRUE)" && \
-    R -e 'root <- renv::paths$root(); unlink(root, recursive = TRUE)' && \
+RUN R -q -e "renv::restore(lockfile='renv.lock', library = '$RENV_LIB', clean = TRUE)" && \
+    R -q -e 'root <- renv::paths$root(); unlink(root, recursive = TRUE)' && \
     strip --strip-debug $RENV_LIB/*/libs/*.so
 
 # install miniconda and geosketch
 # clean conda
 ENV RETICULATE_MINICONDA_PATH=/src/r-miniconda
-RUN R -e "reticulate::install_miniconda()" && \
-    R -e "reticulate::conda_install('r-reticulate', c('geosketch', 'scanorama'), pip = TRUE)" && \
-    CONDA_PATH=$(R -e "cat(reticulate::conda_binary())") && \
+RUN R -q -e "reticulate::install_miniconda()" && \
+    R -q -e "reticulate::conda_install('r-reticulate', c('geosketch', 'scanorama'), pip = TRUE)" && \
+    CONDA_PATH=$(R -q -e "cat(reticulate::conda_binary())") && \
     $CONDA_PATH clean --force-pkgs-dirs -y
 
 # determine system run-time deps
