export upload to aws

--- a/pipeline-runner/NAMESPACE
+++ b/pipeline-runner/NAMESPACE
@@ -42,5 +42,6 @@ export(score_doublets)
 export(subset_ids)
 export(subset_safe)
 export(sym_to_ids)
+export(upload_to_aws)
 import(data.table)
 importFrom(magrittr,"%>%")
