document embed_and_cluster

--- a/pipeline-runner/NAMESPACE
+++ b/pipeline-runner/NAMESPACE
@@ -6,6 +6,7 @@ export(build_metadata_cellsets)
 export(create_scdata)
 export(create_seurat)
 export(download_user_files)
+export(embed_and_cluster)
 export(filter_doublets)
 export(filter_emptydrops)
 export(filter_gene_umi_outlier)
