--- a/.flux.yaml
+++ b/.flux.yaml
@@ -5,21 +5,26 @@ metadata:
   labels:
     sandboxId: FILLED_IN_BY_CI
 ---
-apiVersion: helm.fluxcd.io/v1
+apiVersion: source.toolkit.fluxcd.io/v1beta2
+kind: GitRepository
+metadata:
+  name: FILLED_IN_BY_CI
+  namespace: FILLED_IN_BY_CI
+spec:
+  interval: 10m0s
+  url: https://github.com/biomage-org/pipeline
+---
+apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: FILLED_IN_BY_CI
   namespace: FILLED_IN_BY_CI
-  annotations:
-    fluxcd.io/automated: "true"
   labels:
     sandboxId: FILLED_IN_BY_CI
 spec:
   releaseName: FILLED_IN_BY_CI
-  chart:
-    git: https://github.com/biomage-org/pipeline
-    path: chart-infra/
-    ref: FILLED_IN_BY_CI
+  interval: 2m0s
+  chart: chart-infra/
   valuesFrom:
   - configMapKeyRef:
       name: account-config
