--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -282,7 +282,7 @@ jobs:
 
           yq -i 'select(documentIndex == 1) |
             .metadata.name = strenv(DEPLOYMENT_NAME) |
-            .metadata.namespace = strenv(DEPLOYMENT_NAME) + "-" + strenv(SANDBOX_ID)
+            .metadata.namespace = strenv(DEPLOYMENT_NAME) + "-" + strenv(SANDBOX_ID) |
             .metadata.labels.sandboxId = strenv(SANDBOX_ID) |
             .spec.chart.ref = strenv(CHART_REF) |
             .spec.releaseName = strenv(DEPLOYMENT_NAME) |
