document Seurat loading functions

--- a/pipeline-runner/NAMESPACE
+++ b/pipeline-runner/NAMESPACE
@@ -17,12 +17,14 @@ export(getClusters)
 export(get_feature_types)
 export(ids_to_sym)
 export(list_exclude_genes)
+export(load_seurat)
 export(load_user_files)
 export(make_annot_with_ids)
 export(merge_scdatas)
 export(normalize_annotation_types)
 export(prepare_experiment)
 export(read_10x_annotations)
+export(reconstruct_seurat)
 export(remove_genes)
 export(runClusters)
 export(run_emptydrops)
